20211017_modify the notebook

--- a/workspac_notebook_20211014.ipynb
+++ b/workspac_notebook_20211014.ipynb
@@ -446,9 +446,11 @@
     "# 1. 완전성 (Completeness)\n",
     "check_completeness = []\n",
     "for i in item_info.columns:\n",
-    "    check_completeness.append([f'item_info | {i}', round(sum(item_info[i].isnull())/len(item_info[i])*100, 2)])\n",
+    "    check_completeness.append([f'item_info | {i}', \n",
+    "    round(sum(item_info[i].isnull())/len(item_info[i])*100, 2)])\n",
     "for i in machine_info.columns:\n",
-    "    check_completeness.append([f'machine_info | {i}', round(sum(machine_info[i].isnull())/len(machine_info[i])*100, 2)])\n",
+    "    check_completeness.append([f'machine_info | {i}', \n",
+    "    round(sum(machine_info[i].isnull())/len(machine_info[i])*100, 2)])\n",
     "\n",
     "pd.DataFrame(check_completeness)"
    ]
@@ -469,11 +471,19 @@
    ],
    "source": [
     "# 2. 유일성 (Uniqueness)\n",
-    "check_unique = item_info[['date', 'item', 'urgent']].value_counts().reset_index()\n",
-    "perc_check_unique_item_urgent_info = round((len(check_unique)-len(check_unique[check_unique[0]>1]))/len(check_unique)*100, 2)\n",
+    "check_unique = item_info[\n",
+    "    ['date', 'item', 'urgent']\n",
+    "    ].value_counts().reset_index()\n",
+    "perc_check_unique_item_urgent_info = round(\n",
+    "    (len(check_unique)-len(check_unique[check_unique[0]>1])\n",
+    "    )/len(check_unique)*100, 2)\n",
     "\n",
-    "check_unique = machine_info[['item', 'machine']].value_counts().reset_index()\n",
-    "perc_check_unique_machine_info = round((len(check_unique)-len(check_unique[check_unique[0]>1]))/len(check_unique)*100, 2)\n",
+    "check_unique = machine_info[\n",
+    "    ['item', 'machine']\n",
+    "    ].value_counts().reset_index()\n",
+    "perc_check_unique_machine_info = round(\n",
+    "    (len(check_unique)-len(check_unique[check_unique[0]>1])\n",
+    "    )/len(check_unique)*100, 2)\n",
     "\n",
     "print(f'The percentage of uniqueness for date<->item<->cost<->urgent : {perc_check_unique_item_urgent_info}')\n",
     "print(f'The percentage of uniqueness for item<->machine : {perc_check_unique_machine_info}')\n"
@@ -2012,7 +2022,11 @@
     "dataset = pd.read_csv('dataset.csv')\n",
     "##\n",
     "# MIP\n",
-    "ijt_df = pd.DataFrame(dataset[['item', 'machine', 'date']].value_counts()).reset_index()[['item', 'machine', 'date']]\n",
+    "ijt_df = pd.DataFrame(\n",
+    "    dataset[\n",
+    "        ['item', 'machine', 'date']\n",
+    "        ].value_counts()\n",
+    "        ).reset_index()[['item', 'machine', 'date']]\n",
     "ijt_df=ijt_df.sort_values(['item']).reset_index(drop=True)\n",
     "ijt_set = set()\n",
     "for index, info in ijt_df.iterrows():\n",
@@ -3273,7 +3287,9 @@
     "    #  Constraint 2\n",
     "    for j in J:\n",
     "        for t in T:\n",
-    "            check_value = sum(mijt[i, j, t]*xijt[i, j, t] for i in I) <=  600\n",
+    "            check_value = sum(\n",
+    "                mijt[i, j, t]*xijt[i, j, t] for i in I\n",
+    "                ) <=  600\n",
     "            if check_value == False:\n",
     "                for i in I:\n",
     "                    if mijt[i,j,t] >0:\n",
@@ -3319,7 +3335,9 @@
     "                uit[i, t] = u\n",
     "            else:\n",
     "                uit[i, t] = abs(u)*1000\n",
-    "    objective = sum(uit[i, t]*cit[i, t]*pit[i, t] for i in I for t in T)\n",
+    "    objective = sum(\n",
+    "        uit[i, t]*cit[i, t]*pit[i, t] for i in I for t in T\n",
+    "        )\n",
     "    return objective\n",
     "\n",
     "\n",
@@ -3333,7 +3351,9 @@
     "                uit[i, t] = u\n",
     "            else:\n",
     "                uit[i, t] = abs(u)*100000\n",
-    "    objective = sum(uit[i, t]*cit[i, t]*pit[i, t] for i in I for t in T)\n",
+    "    objective = sum(\n",
+    "        uit[i, t]*cit[i, t]*pit[i, t] for i in I for t in T\n",
+    "        )\n",
     "    return objective\n",
     "\n",
     "# tournament selection\n",
@@ -3461,7 +3481,9 @@
     "xijt_keys = list(xijt.keys())\n",
     "mijt_keys = list(mijt.keys())\n",
     "\n",
-    "best, score, log = genetic_algorithm(objective, mijt, n_iter, n_pop, r_cross, r_mut)\n",
+    "best, score, log = genetic_algorithm(\n",
+    "    objective, mijt, n_iter, n_pop, r_cross, r_mut\n",
+    "    )\n",
     "print('Done!')\n"
    ]
   },
