--- a/workspac_notebook_20211014.ipynb
+++ b/workspac_notebook_20211014.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,65 +180,65 @@
        "      <th>date</th>\n",
        "      <th>item</th>\n",
        "      <th>cost</th>\n",
-       "      <th>urgent</th>\n",
        "      <th>qty</th>\n",
+       "      <th>urgent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-02-10</td>\n",
-       "      <td>S00341</td>\n",
-       "      <td>2990</td>\n",
-       "      <td>0</td>\n",
-       "      <td>500</td>\n",
+       "      <td>2021-05-13</td>\n",
+       "      <td>K04033</td>\n",
+       "      <td>25870</td>\n",
+       "      <td>318</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-02-18</td>\n",
-       "      <td>052996</td>\n",
-       "      <td>20000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2021-05-24</td>\n",
+       "      <td>K04031</td>\n",
+       "      <td>16229</td>\n",
+       "      <td>383</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-03-10</td>\n",
-       "      <td>S00341</td>\n",
-       "      <td>2990</td>\n",
+       "      <td>2021-05-30</td>\n",
+       "      <td>069622</td>\n",
+       "      <td>5409</td>\n",
+       "      <td>20</td>\n",
        "      <td>0</td>\n",
-       "      <td>500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-04-10</td>\n",
-       "      <td>S00341</td>\n",
-       "      <td>2990</td>\n",
+       "      <td>2021-05-30</td>\n",
+       "      <td>051718</td>\n",
+       "      <td>8333</td>\n",
+       "      <td>19</td>\n",
        "      <td>0</td>\n",
-       "      <td>500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-05-10</td>\n",
-       "      <td>S00341</td>\n",
-       "      <td>2990</td>\n",
+       "      <td>2021-06-03</td>\n",
+       "      <td>056984</td>\n",
+       "      <td>36533</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>398</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date    item   cost  urgent  qty\n",
-       "0 2021-02-10  S00341   2990       0  500\n",
-       "1 2021-02-18  052996  20000       0    2\n",
-       "2 2021-03-10  S00341   2990       0  500\n",
-       "3 2021-04-10  S00341   2990       0  500\n",
-       "4 2021-05-10  S00341   2990       0  398"
+       "        date    item   cost  qty urgent\n",
+       "0 2021-05-13  K04033  25870  318      1\n",
+       "1 2021-05-24  K04031  16229  383      1\n",
+       "2 2021-05-30  069622   5409   20      0\n",
+       "3 2021-05-30  051718   8333   19      0\n",
+       "4 2021-06-03  056984  36533    4      0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "4  050093    0416     3.92  153.061224"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,12 +778,12 @@
     {
      "data": {
       "text/plain": [
-       "date        item  \n",
-       "2021-02-10  S00341    1\n",
-       "2021-07-02  057791    1\n",
-       "            068898    1\n",
-       "            069159    1\n",
-       "            069196    1\n",
+       "date        item    cost  \n",
+       "2021-02-10  S00341  2990      1\n",
+       "2021-07-02  057791  40973     1\n",
+       "            068898  9170      1\n",
+       "            069159  481190    1\n",
+       "            069196  10220     1\n",
        "dtype: int64"
       ]
      },
@@ -794,7 +794,7 @@
    ],
    "source": [
     "item_info = item_info.groupby(['date', 'item', 'cost', 'urgent']).sum().reset_index()\n",
-    "item_info[['date', 'item']].value_counts().head()\n"
+    "item_info[['date', 'item', 'cost']].value_counts().head()\n"
    ]
   },
   {
