--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "source": [
     "# 1. 완전성 (Completeness)\n",
     "perc = 30\n",
@@ -348,8 +348,10 @@
     "for df_name in list(df_set):\n",
     "    print(f'DataFrame name: {df_name}')\n",
     "    df = df_set[df_name]\n",
-    "    print('[step 1]')\n",
-    "    print(round(df.isnull().sum()/len(df), 2))\n",
+    "    print('[step 1-1]')\n",
+    "    print(round(df.isnull().sum()/len(df)*100, 2))\n",
+    "    print('[step 1-2]')\n",
+    "    print(df.isnull().sum()/len(df)*100>perc)\n",
     "    print('[step 2-1]')\n",
     "    print(df.isnull().head())\n",
     "    print('[step 2-2]')\n",
@@ -367,13 +369,20 @@
      "name": "stdout",
      "text": [
       "DataFrame name: item_info\n",
-      "[step 1]\n",
+      "[step 1-1]\n",
       "date      0.0\n",
       "item      0.0\n",
       "cost      0.0\n",
       "qty       0.0\n",
       "urgent    0.0\n",
       "dtype: float64\n",
+      "[step 1-2]\n",
+      "date      False\n",
+      "item      False\n",
+      "cost      False\n",
+      "qty       False\n",
+      "urgent    False\n",
+      "dtype: bool\n",
       "[step 2-1]\n",
       "    date   item   cost    qty  urgent\n",
       "0  False  False  False  False   False\n",
@@ -391,11 +400,16 @@
       "[step 2-3]\n",
       "0\n",
       "DataFrame name: machine_info\n",
-      "[step 1]\n",
-      "item        0.0\n",
-      "machine     0.0\n",
-      "capacity    0.0\n",
+      "[step 1-1]\n",
+      "item        0.00\n",
+      "machine     0.01\n",
+      "capacity    0.00\n",
       "dtype: float64\n",
+      "[step 1-2]\n",
+      "item        False\n",
+      "machine     False\n",
+      "capacity    False\n",
+      "dtype: bool\n",
       "[step 2-1]\n",
       "    item  machine  capacity\n",
       "0  False    False     False\n",
