--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -433,9 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "source": [
     "# 2. 유일성 (Uniqueness)\n",
+    "\n",
     "check_unique = item_info[['date', 'item', 'urgent']].value_counts().reset_index()\n",
     "perc_check_unique_item_urgent_info = round((len(check_unique)-len(check_unique[check_unique[0]>1]))/len(check_unique)*100, 2)\n",
     "\n",
@@ -443,7 +444,8 @@
     "perc_check_unique_machine_info = round((len(check_unique)-len(check_unique[check_unique[0]>1]))/len(check_unique)*100, 2)\n",
     "\n",
     "print(f'The percentage of uniqueness for date<->item<->cost<->urgent : {perc_check_unique_item_urgent_info}')\n",
-    "print(f'The percentage of uniqueness for item<->machine : {perc_check_unique_machine_info}')\n"
+    "print(f'The percentage of uniqueness for item<->machine : {perc_check_unique_machine_info}')\n",
+    "print(\"유일성 지수 : %.2f%% \"%((perc_check_unique_machine_info+perc_check_unique_item_urgent_info)/2))"
    ],
    "outputs": [
     {
@@ -451,7 +453,8 @@
      "name": "stdout",
      "text": [
       "The percentage of uniqueness for date<->item<->cost<->urgent : 98.33\n",
-      "The percentage of uniqueness for item<->machine : 100.0\n"
+      "The percentage of uniqueness for item<->machine : 100.0\n",
+      "유일성 지수 : 99.16% \n"
      ]
     }
    ],
