--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -437,11 +437,19 @@
    "source": [
     "# 2. 유일성 (Uniqueness)\n",
     "\n",
-    "check_unique = item_info[['date', 'item', 'urgent']].value_counts().reset_index()\n",
-    "perc_check_unique_item_urgent_info = round((len(check_unique)-len(check_unique[check_unique[0]>1]))/len(check_unique)*100, 2)\n",
+    "check_unique = item_info[\n",
+    "    ['date', 'item', 'urgent']\n",
+    "    ].value_counts().reset_index()\n",
+    "perc_check_unique_item_urgent_info = round(\n",
+    "    (len(check_unique)-len(check_unique[check_unique[0]>1]))\n",
+    "    /len(check_unique)*100, 2)\n",
     "\n",
-    "check_unique = machine_info[['item', 'machine']].value_counts().reset_index()\n",
-    "perc_check_unique_machine_info = round((len(check_unique)-len(check_unique[check_unique[0]>1]))/len(check_unique)*100, 2)\n",
+    "check_unique = machine_info[\n",
+    "    ['item', 'machine']\n",
+    "    ].value_counts().reset_index()\n",
+    "perc_check_unique_machine_info = round(\n",
+    "    (len(check_unique)-len(check_unique[check_unique[0]>1]))\n",
+    "    /len(check_unique)*100, 2)\n",
     "\n",
     "print(f'The percentage of uniqueness for date<->item<->cost<->urgent : {perc_check_unique_item_urgent_info}')\n",
     "print(f'The percentage of uniqueness for item<->machine : {perc_check_unique_machine_info}')\n",
