--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "source": [
     "from numpy.random import randint\n",
     "from numpy.random import rand\n",
     "import pandas as pd\n",
     "\n",
     "from tqdm import tqdm\n",
-    "pd.set_option('display.max_row', 200)\n"
+    "pd.set_option('display.max_row', 30)\n"
    ],
    "outputs": [],
    "metadata": {
@@ -463,6 +463,302 @@
       "The percentage of uniqueness for date<->item<->cost<->urgent : 98.33\n",
       "The percentage of uniqueness for item<->machine : 100.0\n",
       "유일성 지수 : 99.16% \n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "source": [
+    "check_unique = item_info[\n",
+    "    ['date', 'item', 'urgent']\n",
+    "    ].value_counts().reset_index()\n",
+    "check_unique"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>item</th>\n",
+       "      <th>urgent</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-06-15</td>\n",
+       "      <td>K03115</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-07-09</td>\n",
+       "      <td>057387</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-07-09</td>\n",
+       "      <td>057386</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-02-10</td>\n",
+       "      <td>S00341</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-07-06</td>\n",
+       "      <td>059988</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>2021-06-18</td>\n",
+       "      <td>Z01343</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>2021-06-21</td>\n",
+       "      <td>062716</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>2021-06-21</td>\n",
+       "      <td>062953</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>2021-06-21</td>\n",
+       "      <td>072253</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>2021-10-08</td>\n",
+       "      <td>071028</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>180 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date    item  urgent  0\n",
+       "0   2021-06-15  K03115       0  2\n",
+       "1   2021-07-09  057387       1  2\n",
+       "2   2021-07-09  057386       1  2\n",
+       "3   2021-02-10  S00341       0  1\n",
+       "4   2021-07-06  059988       1  1\n",
+       "..         ...     ...     ... ..\n",
+       "175 2021-06-18  Z01343       0  1\n",
+       "176 2021-06-21  062716       1  1\n",
+       "177 2021-06-21  062953       1  1\n",
+       "178 2021-06-21  072253       1  1\n",
+       "179 2021-10-08  071028       1  1\n",
+       "\n",
+       "[180 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "source": [
+    "check_unique = machine_info[\n",
+    "    ['item', 'machine']\n",
+    "    ].value_counts().reset_index()\n",
+    "check_unique"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>machine</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>050060</td>\n",
+       "      <td>0433</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>K00347</td>\n",
+       "      <td>0404</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K00337</td>\n",
+       "      <td>0438</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K00337</td>\n",
+       "      <td>0437</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>K00337</td>\n",
+       "      <td>0410</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21144</th>\n",
+       "      <td>058398</td>\n",
+       "      <td>0408</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21145</th>\n",
+       "      <td>058398</td>\n",
+       "      <td>0404</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21146</th>\n",
+       "      <td>058396</td>\n",
+       "      <td>0438</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21147</th>\n",
+       "      <td>058396</td>\n",
+       "      <td>0434</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21148</th>\n",
+       "      <td>Z01415</td>\n",
+       "      <td>0409</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21149 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         item machine  0\n",
+       "0      050060    0433  1\n",
+       "1      K00347    0404  1\n",
+       "2      K00337    0438  1\n",
+       "3      K00337    0437  1\n",
+       "4      K00337    0410  1\n",
+       "...       ...     ... ..\n",
+       "21144  058398    0408  1\n",
+       "21145  058398    0404  1\n",
+       "21146  058396    0438  1\n",
+       "21147  058396    0434  1\n",
+       "21148  Z01415    0409  1\n",
+       "\n",
+       "[21149 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "source": [
+    "perc_check_unique_item_urgent_info = round(\n",
+    "    (len(check_unique)-len(check_unique[check_unique[0]>1]))\n",
+    "    /len(check_unique)*100, 2)\n",
+    "print(f'The percentage of uniqueness for date<->item<->cost<->urgent : {perc_check_unique_item_urgent_info}')\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The percentage of uniqueness for date<->item<->cost<->urgent : 100.0\n"
      ]
     }
    ],
