--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -766,38 +766,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
+   "source": [
+    "cit"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{('K04033', 1): 25870,\n",
+       " ('K04031', 1): 16229,\n",
+       " ('K04037', 2): 7810,\n",
+       " ('K04046', 2): 9416,\n",
+       " ('K04101', 3): 15640,\n",
+       " ('K61088', 3): 11500,\n",
+       " ('K62716', 4): 27590,\n",
+       " ('K61606', 4): 14448,\n",
+       " ('K62330', 5): 13099,\n",
+       " ('K61218', 5): 35100,\n",
+       " ('K57386', 6): 22750,\n",
+       " ('K57791', 6): 42810,\n",
+       " ('K04031', 2): 0,\n",
+       " ('K04031', 3): 0,\n",
+       " ('K04031', 4): 0,\n",
+       " ('K04031', 5): 0,\n",
+       " ('K04031', 6): 0,\n",
+       " ('K57386', 1): 0,\n",
+       " ('K57386', 2): 0,\n",
+       " ('K57386', 3): 0,\n",
+       " ('K57386', 4): 0,\n",
+       " ('K57386', 5): 0,\n",
+       " ('K62716', 1): 0,\n",
+       " ('K62716', 2): 0,\n",
+       " ('K62716', 3): 0,\n",
+       " ('K62716', 5): 0,\n",
+       " ('K62716', 6): 0,\n",
+       " ('K04101', 1): 0,\n",
+       " ('K04101', 2): 0,\n",
+       " ('K04101', 4): 0,\n",
+       " ('K04101', 5): 0,\n",
+       " ('K04101', 6): 0,\n",
+       " ('K61088', 1): 0,\n",
+       " ('K61088', 2): 0,\n",
+       " ('K61088', 4): 0,\n",
+       " ('K61088', 5): 0,\n",
+       " ('K61088', 6): 0,\n",
+       " ('K61218', 1): 0,\n",
+       " ('K61218', 2): 0,\n",
+       " ('K61218', 3): 0,\n",
+       " ('K61218', 4): 0,\n",
+       " ('K61218', 6): 0,\n",
+       " ('K04037', 1): 0,\n",
+       " ('K04037', 3): 0,\n",
+       " ('K04037', 4): 0,\n",
+       " ('K04037', 5): 0,\n",
+       " ('K04037', 6): 0,\n",
+       " ('K62330', 1): 0,\n",
+       " ('K62330', 2): 0,\n",
+       " ('K62330', 3): 0,\n",
+       " ('K62330', 4): 0,\n",
+       " ('K62330', 6): 0,\n",
+       " ('K04033', 2): 0,\n",
+       " ('K04033', 3): 0,\n",
+       " ('K04033', 4): 0,\n",
+       " ('K04033', 5): 0,\n",
+       " ('K04033', 6): 0,\n",
+       " ('K61606', 1): 0,\n",
+       " ('K61606', 2): 0,\n",
+       " ('K61606', 3): 0,\n",
+       " ('K61606', 5): 0,\n",
+       " ('K61606', 6): 0,\n",
+       " ('K04046', 1): 0,\n",
+       " ('K04046', 3): 0,\n",
+       " ('K04046', 4): 0,\n",
+       " ('K04046', 5): 0,\n",
+       " ('K04046', 6): 0,\n",
+       " ('K57791', 1): 0,\n",
+       " ('K57791', 2): 0,\n",
+       " ('K57791', 3): 0,\n",
+       " ('K57791', 4): 0,\n",
+       " ('K57791', 5): 0}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "source": [
     "# 3. 유효성 (Validity)\n",
+    "\n",
+    "\n",
     "import datetime\n",
     "import numpy as np\n",
     "\n",
+    "# 데이터 범위 확인\n",
+    "print('[Step 1] 데이터 범위를 벗어난 데이터 수')\n",
+    "df = item_info\n",
+    "c_lb = df['cost'] >= 0\n",
+    "c_ub = df['cost'] <= 1000000\n",
+    "\n",
+    "q_lb = df['qty'] >= 0\n",
+    "q_ub = df['qty'] <= 1000000\n",
+    "\n",
+    "u_lb = df['urgent'] >= 0\n",
+    "u_ub = df['urgent'] <= 1\n",
+    "\n",
+    "vald_df = df[c_lb & c_ub & q_lb & q_ub & u_lb & u_ub]\n",
+    "print(f'item_info case: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "df = machine_info\n",
+    "cap_lb = df['capacity'] >= 0\n",
+    "cap_ub = df['capacity'] <= 1000000\n",
+    "\n",
+    "vald_df = df[cap_ub & cap_lb]\n",
+    "print(f'machine_info case: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "print('[Step3] 수집된 날짜를 벗어나는 데이터 수')\n",
+    "d0= pd.Timestamp(datetime.date(2021,2,1))  #date 객체1\n",
+    "d1= pd.Timestamp(datetime.date(2021,7,31))  #date 객체2\n",
+    "con1=item_info['date']>=d0\n",
+    "con2=item_info['date']<=d1\n",
+    "vald_dt=item_info[con1&con2]\n",
+    "print(f'item_info case: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "# 데이터 형식 확인\n",
+    "print('[Step 2] 데이터 형식을 벗어나는 데이터 수')\n",
     "check_validity = []\n",
     "check = len(item_info) - sum(item_info['date'].apply(lambda x: isinstance(x, datetime.datetime)))\n",
-    "check_validity.append(['item_info | date', check])\n",
+    "check_validity.append(['item_info | date (datetime)', check])\n",
     "check = len(item_info) - sum(item_info['item'].apply(lambda x: isinstance(x, str)))\n",
-    "check_validity.append(['item_info | item', check])\n",
+    "check_validity.append(['item_info | item (str)', check])\n",
     "check = len(item_info) - sum(item_info['cost'].apply(lambda x: isinstance(x, int)))\n",
-    "check_validity.append(['item_info | cost', check])\n",
+    "check_validity.append(['item_info | cost (int)', check])\n",
     "check = len(item_info) - sum(item_info['qty'].apply(lambda x: isinstance(x, int)))\n",
-    "check_validity.append(['item_info | qty', check])\n",
+    "check_validity.append(['item_info | qty (int)', check])\n",
     "check = len(item_info) - sum(item_info['urgent'].apply(lambda x: isinstance(x, int)))\n",
-    "check_validity.append(['item_info | urgent', check])\n",
+    "check_validity.append(['item_info | urgent (int)', check])\n",
     "\n",
-    "check = round(( len(machine_info)- sum(machine_info['item'].apply(lambda x: isinstance(x, str))))/len(machine_info)*100, 3)\n",
-    "check_validity.append(['machine_info | item', check])\n",
-    "check = round((len(machine_info) - sum(machine_info['machine'].apply(lambda x: isinstance(x, str))))/len(machine_info)*100, 3)\n",
-    "check_validity.append(['machine_info | machine', check])\n",
+    "check = round(\n",
+    "    ( len(machine_info)- sum(machine_info['item'].apply(lambda x: isinstance(x, str))\n",
+    "    ))/len(machine_info)*100, 3)\n",
+    "check_validity.append(['machine_info | item (str)', check])\n",
+    "check = round(\n",
+    "    (len(machine_info) - sum(machine_info['machine'].apply(lambda x: isinstance(x, str))\n",
+    "    ))/len(machine_info)*100, 3)\n",
+    "check_validity.append(['machine_info | machine (str)', check])\n",
     "check = 0\n",
     "for i in machine_info['capacity']:\n",
     "    if isinstance(i, float):\n",
     "        if isinstance(i, int):\n",
     "            check += 0\n",
-    "check_validity.append(['machine_info | capacity', round(check/len(machine_info)*100,3)])\n",
+    "check_validity.append(['machine_info | capacity (float)', round(check/len(machine_info)*100,3)])\n",
     "\n",
-    "pd.DataFrame(check_validity)"
+    "pd.DataFrame(check_validity)\n",
+    "\n",
+    "\n"
    ],
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[Step 1] 데이터 범위를 벗어난 데이터 수\n",
+      "item_info case: 0\n",
+      "machine_info case: 0\n",
+      "[Step3] 수집된 날짜를 벗어나는 데이터 수\n",
+      "item_info case: 0\n",
+      "[Step 2] 데이터 형식을 벗어나는 데이터 수\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -827,42 +970,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>item_info | date</td>\n",
+       "      <td>item_info | date (datetime)</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>item_info | item</td>\n",
+       "      <td>item_info | item (str)</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>item_info | cost</td>\n",
+       "      <td>item_info | cost (int)</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>item_info | qty</td>\n",
+       "      <td>item_info | qty (int)</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>item_info | urgent</td>\n",
+       "      <td>item_info | urgent (int)</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>machine_info | item</td>\n",
+       "      <td>machine_info | item (str)</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>machine_info | machine</td>\n",
+       "      <td>machine_info | machine (str)</td>\n",
        "      <td>0.009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>machine_info | capacity</td>\n",
+       "      <td>machine_info | capacity (float)</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -870,19 +1013,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                         0      1\n",
-       "0         item_info | date  0.000\n",
-       "1         item_info | item  0.000\n",
-       "2         item_info | cost  0.000\n",
-       "3          item_info | qty  0.000\n",
-       "4       item_info | urgent  0.000\n",
-       "5      machine_info | item  0.000\n",
-       "6   machine_info | machine  0.009\n",
-       "7  machine_info | capacity  0.000"
+       "                                 0      1\n",
+       "0      item_info | date (datetime)  0.000\n",
+       "1           item_info | item (str)  0.000\n",
+       "2           item_info | cost (int)  0.000\n",
+       "3            item_info | qty (int)  0.000\n",
+       "4         item_info | urgent (int)  0.000\n",
+       "5        machine_info | item (str)  0.000\n",
+       "6     machine_info | machine (str)  0.009\n",
+       "7  machine_info | capacity (float)  0.000"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 83
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "source": [
+    "\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "item_info case: 0\n"
+     ]
     }
    ],
    "metadata": {}
