--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "source": [
     "from numpy.random import randint\n",
     "from numpy.random import rand\n",
     "import pandas as pd\n",
-    "\n",
+    "import datetime\n",
+    "import numpy as np\n",
     "from tqdm import tqdm\n",
     "pd.set_option('display.max_row', 30)\n"
    ],
@@ -857,43 +858,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "source": [
+    "# 3. 유효성 (Validity)\n",
+    "\n",
+    "print('item_info case')\n",
+    "df = item_info\n",
+    "c_lb = df['cost'] >= 0\n",
+    "c_ub = df['cost'] <= 1000000\n",
+    "q_lb = df['qty'] >= 0\n",
+    "q_ub = df['qty'] <= 1000000\n",
+    "u_lb = df['urgent'] >= 0\n",
+    "u_ub = df['urgent'] <= 1\n",
+    "vald_df = df[c_lb & c_ub & q_lb & q_ub & u_lb & u_ub]\n",
+    "print(f'[Step 1] 데이터 범위를 벗어난 데이터 수: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "d0 = pd.Timestamp(datetime.date(2021,1,31))  #date 객체1\n",
+    "d1 = pd.Timestamp(datetime.date(2021,10,31))  #date 객체2\n",
+    "con1 = vald_df['date'] >= d0\n",
+    "con2 = vald_df['date'] <= d1\n",
+    "vald_df = vald_df[con1&con2]\n",
+    "print(f'[Step2] 수집된 날짜를 벗어나는 데이터 수: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "vald_df['date'] = vald_df['date'].apply(lambda x: isinstance(x, datetime.datetime))\n",
+    "vald_df['item'] = vald_df['item'].apply(lambda x: isinstance(x, str))\n",
+    "vald_df['cost'] = vald_df['cost'].apply(lambda x: isinstance(x, int))\n",
+    "vald_df['qty'] = vald_df['qty'].apply(lambda x: isinstance(x, int))\n",
+    "vald_df['urgent'] = vald_df['urgent'].apply(lambda x: isinstance(x, int))\n",
+    "print(f'[Step 3] 데이터 형식을 벗어나는 데이터 수: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "vald_df[\n",
+    "    (vald_df['date']==True)\n",
+    "    &(vald_df['item']==True)\n",
+    "    &(vald_df['cost']==True)\n",
+    "    &(vald_df['qty']==True)\n",
+    "    &(vald_df['urgent']==True)\n",
+    "    ]\n",
+    "vald_len=len(vald_df)\n",
+    "print(\"유효성 지수 : %.2f%% \"%(vald_len/len(df)*100)) \n",
+    "\n",
+    "print('machine_info case')\n",
+    "df = machine_info\n",
+    "cap_lb = df['capacity'] >= 0\n",
+    "cap_ub = df['capacity'] <= 1000000\n",
+    "vald_df = df[cap_ub & cap_lb]\n",
+    "print(f'[Step 1] 데이터 범위를 벗어난 데이터 수: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "vald_df['item'] = vald_df['item'].apply(lambda x: isinstance(x, str))\n",
+    "vald_df['machine'] = vald_df['machine'].apply(lambda x: isinstance(x, str))\n",
+    "vald_df['capacity'] = vald_df['capacity'].apply(lambda x: float(x) if isinstance(x, int)==True else x)\n",
+    "vald_df['capacity'] = vald_df['capacity'].apply(lambda x: isinstance(x, float))\n",
+    "print(f'[Step 3] 데이터 형식을 벗어나는 데이터 수: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "vald_df[\n",
+    "    (vald_df['item']==True)\n",
+    "    &(vald_df['machine']==True)\n",
+    "    &(vald_df['capacity']==True)\n",
+    "    ]\n",
+    "vald_len=len(vald_df)\n",
+    "print(\"유효성 지수 : %.2f%% \"%(vald_len/len(df)*100)) \n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "item_info case\n",
+      "[Step 1] 데이터 범위를 벗어난 데이터 수: 0\n",
+      "[Step2] 수집된 날짜를 벗어나는 데이터 수: 0\n",
+      "[Step 3] 데이터 형식을 벗어나는 데이터 수: 0\n",
+      "유효성 지수 : 100.00% \n",
+      "machine_info case\n",
+      "[Step 1] 데이터 범위를 벗어난 데이터 수: 0\n",
+      "[Step 3] 데이터 형식을 벗어나는 데이터 수: 0\n",
+      "유효성 지수 : 100.00% \n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "source": [
     "# 3. 유효성 (Validity)\n",
     "\n",
-    "\n",
-    "import datetime\n",
-    "import numpy as np\n",
     "\n",
     "# 데이터 범위 확인\n",
     "print('[Step 1] 데이터 범위를 벗어난 데이터 수')\n",
     "df = item_info\n",
     "c_lb = df['cost'] >= 0\n",
     "c_ub = df['cost'] <= 1000000\n",
-    "\n",
     "q_lb = df['qty'] >= 0\n",
     "q_ub = df['qty'] <= 1000000\n",
-    "\n",
     "u_lb = df['urgent'] >= 0\n",
     "u_ub = df['urgent'] <= 1\n",
-    "\n",
     "vald_df = df[c_lb & c_ub & q_lb & q_ub & u_lb & u_ub]\n",
     "print(f'item_info case: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "\n",
+    "print('[Step3] 수집된 날짜를 벗어나는 데이터 수')\n",
+    "d0 = pd.Timestamp(datetime.date(2021,2,1))  #date 객체1\n",
+    "d1 = pd.Timestamp(datetime.date(2021,7,31))  #date 객체2\n",
+    "con1 = vald_df['date'] >= d0\n",
+    "con2 = vald_df['date'] <= d1\n",
+    "vald_dt = vald_df[con1&con2]\n",
+    "print(f'item_info case: {len(df) - len(vald_df)}')\n",
+    "\n",
+    "\n",
+    "vald_dt['date'] = vald_dt['date'].apply(lambda x: isinstance(x, datetime.datetime))\n",
+    "vald_dt['item'] = vald_dt['item'].apply(lambda x: isinstance(x, str))\n",
+    "vald_dt['cost'] = vald_dt['cost'].apply(lambda x: isinstance(x, int))\n",
+    "vald_dt['qty'] = vald_dt['qty'].apply(lambda x: isinstance(x, int))\n",
+    "vald_dt['urgent'] = vald_dt['urgent'].apply(lambda x: isinstance(x, int))\n",
+    "\n",
+    "\n",
     "\n",
     "df = machine_info\n",
     "cap_lb = df['capacity'] >= 0\n",
     "cap_ub = df['capacity'] <= 1000000\n",
-    "\n",
     "vald_df = df[cap_ub & cap_lb]\n",
     "print(f'machine_info case: {len(df) - len(vald_df)}')\n",
-    "\n",
-    "print('[Step3] 수집된 날짜를 벗어나는 데이터 수')\n",
-    "d0= pd.Timestamp(datetime.date(2021,2,1))  #date 객체1\n",
-    "d1= pd.Timestamp(datetime.date(2021,7,31))  #date 객체2\n",
-    "con1=item_info['date']>=d0\n",
-    "con2=item_info['date']<=d1\n",
-    "vald_dt=item_info[con1&con2]\n",
-    "print(f'item_info case: {len(df) - len(vald_df)}')\n",
     "\n",
     "# 데이터 형식 확인\n",
     "print('[Step 2] 데이터 형식을 벗어나는 데이터 수')\n",
