--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "source": [
     "# 3. 유효성 (Validity)\n",
     "\n",
@@ -878,7 +878,7 @@
     "con1 = vald_df['date'] >= d0\n",
     "con2 = vald_df['date'] <= d1\n",
     "vald_df = vald_df[con1&con2]\n",
-    "print(f'[Step2] 수집된 날짜를 벗어나는 데이터 수: {len(df) - len(vald_df)}')\n",
+    "print(f'[Step 2] 수집된 날짜를 벗어나는 데이터 수: {len(df) - len(vald_df)}')\n",
     "\n",
     "vald_df['date'] = vald_df['date'].apply(lambda x: isinstance(x, datetime.datetime))\n",
     "vald_df['item'] = vald_df['item'].apply(lambda x: isinstance(x, str))\n",
@@ -894,8 +894,9 @@
     "    &(vald_df['qty']==True)\n",
     "    &(vald_df['urgent']==True)\n",
     "    ]\n",
-    "vald_len=len(vald_df)\n",
-    "print(\"유효성 지수 : %.2f%% \"%(vald_len/len(df)*100)) \n",
+    "vald_len = len(vald_df)\n",
+    "item_vald = vald_len/len(df)*100\n",
+    "print(\"item_info 유효성 지수 : %.2f%% \"%(item_vald)) \n",
     "\n",
     "print('machine_info case')\n",
     "df = machine_info\n",
@@ -915,8 +916,11 @@
     "    &(vald_df['machine']==True)\n",
     "    &(vald_df['capacity']==True)\n",
     "    ]\n",
-    "vald_len=len(vald_df)\n",
-    "print(\"유효성 지수 : %.2f%% \"%(vald_len/len(df)*100)) \n"
+    "vald_len = len(vald_df)\n",
+    "machine_vald = vald_len/len(df)*100\n",
+    "print(\"machine_info 유효성 지수 : %.2f%% \"%(machine_vald)) \n",
+    "\n",
+    "print(\"유효성 지수 : %.2f%% \"%((item_vald + machine_vald)/2)) \n"
    ],
    "outputs": [
     {
@@ -925,12 +929,13 @@
      "text": [
       "item_info case\n",
       "[Step 1] 데이터 범위를 벗어난 데이터 수: 0\n",
-      "[Step2] 수집된 날짜를 벗어나는 데이터 수: 0\n",
+      "[Step 2] 수집된 날짜를 벗어나는 데이터 수: 0\n",
       "[Step 3] 데이터 형식을 벗어나는 데이터 수: 0\n",
-      "유효성 지수 : 100.00% \n",
+      "item_info 유효성 지수 : 100.00% \n",
       "machine_info case\n",
       "[Step 1] 데이터 범위를 벗어난 데이터 수: 0\n",
       "[Step 3] 데이터 형식을 벗어나는 데이터 수: 0\n",
+      "machine_info 유효성 지수 : 100.00% \n",
       "유효성 지수 : 100.00% \n"
      ]
     }
