--- a/workspac_notebook.ipynb
+++ b/workspac_notebook.ipynb
@@ -946,45 +946,6 @@
    "cell_type": "code",
    "execution_count": 83,
    "source": [
-    "# 3. 유효성 (Validity)\n",
-    "\n",
-    "\n",
-    "# 데이터 범위 확인\n",
-    "print('[Step 1] 데이터 범위를 벗어난 데이터 수')\n",
-    "df = item_info\n",
-    "c_lb = df['cost'] >= 0\n",
-    "c_ub = df['cost'] <= 1000000\n",
-    "q_lb = df['qty'] >= 0\n",
-    "q_ub = df['qty'] <= 1000000\n",
-    "u_lb = df['urgent'] >= 0\n",
-    "u_ub = df['urgent'] <= 1\n",
-    "vald_df = df[c_lb & c_ub & q_lb & q_ub & u_lb & u_ub]\n",
-    "print(f'item_info case: {len(df) - len(vald_df)}')\n",
-    "\n",
-    "\n",
-    "print('[Step3] 수집된 날짜를 벗어나는 데이터 수')\n",
-    "d0 = pd.Timestamp(datetime.date(2021,2,1))  #date 객체1\n",
-    "d1 = pd.Timestamp(datetime.date(2021,7,31))  #date 객체2\n",
-    "con1 = vald_df['date'] >= d0\n",
-    "con2 = vald_df['date'] <= d1\n",
-    "vald_dt = vald_df[con1&con2]\n",
-    "print(f'item_info case: {len(df) - len(vald_df)}')\n",
-    "\n",
-    "\n",
-    "vald_dt['date'] = vald_dt['date'].apply(lambda x: isinstance(x, datetime.datetime))\n",
-    "vald_dt['item'] = vald_dt['item'].apply(lambda x: isinstance(x, str))\n",
-    "vald_dt['cost'] = vald_dt['cost'].apply(lambda x: isinstance(x, int))\n",
-    "vald_dt['qty'] = vald_dt['qty'].apply(lambda x: isinstance(x, int))\n",
-    "vald_dt['urgent'] = vald_dt['urgent'].apply(lambda x: isinstance(x, int))\n",
-    "\n",
-    "\n",
-    "\n",
-    "df = machine_info\n",
-    "cap_lb = df['capacity'] >= 0\n",
-    "cap_ub = df['capacity'] <= 1000000\n",
-    "vald_df = df[cap_ub & cap_lb]\n",
-    "print(f'machine_info case: {len(df) - len(vald_df)}')\n",
-    "\n",
     "# 데이터 형식 확인\n",
     "print('[Step 2] 데이터 형식을 벗어나는 데이터 수')\n",
     "check_validity = []\n",
@@ -1122,19 +1083,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 124,
    "source": [
-    "\n"
+    "# 4. 일관성 \n",
+    "df = item_info\n",
+    "vald_df = df[['item']].copy()\n",
+    "vald_df['check'] = vald_df['item'].isin(set(machine_info['item']))\n",
+    "print(\"일관성 지수 : %.2f%% \"%(sum(vald_df['check'])/len(df)*100)) \n",
+    "vald_df\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "item_info case: 0\n"
+      "일관성 지수 : 69.40% \n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>K04033</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>K04031</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>069622</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>051718</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>056984</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>070541</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>K04037</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>071028</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>Z00807</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>071028</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>183 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       item  check\n",
+       "0    K04033   True\n",
+       "1    K04031   True\n",
+       "2    069622  False\n",
+       "3    051718   True\n",
+       "4    056984   True\n",
+       "..      ...    ...\n",
+       "178  070541  False\n",
+       "179  K04037   True\n",
+       "180  071028  False\n",
+       "181  Z00807   True\n",
+       "182  071028  False\n",
+       "\n",
+       "[183 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 124
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "machine_info"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
